# rust-discordbot

./: .env.example  .gitignore  Cargo.toml
src/: config.rs  main.rs  utils.rs
src/commands/: ping.rs
src/handlers/: honeypot.rs
